# axum_with_prisma

./: .dockerignore  Cargo.toml  Dockerfile  README.md
axum_server/: Cargo.toml
axum_server/src/: main.rs
axum_server/src/api/: api.rs
axum_server/src/models/: models.rs
axum_server/src/prisma/: mod.rs  prisma.rs
prisma/: dev.db  schema.prisma
prisma_cli/: Cargo.toml
